Annotations accept non-aggregates Ticket #14030
Implement feedback from Ansii

Ensure aggregates can only be aggregated in subquery

get_cols replaced by get_group_by_cols

Fix annotation typo

Refactor expressions into smaller components

Inspiration for splitting the expression classes comes from PeeWee
which has a fairly good object model.

Split ExpressionNode into smaller units

All tests passing after refactor

Clean up expression implementation

Summarised aggregate state is passed through prepare

Make Col types into expressions

Small tweaks to improve the Func type

Fix regression with non-aggregate annotations

Tests for custom sql functions

Change arguments name to expressions

Fix documentation related to expression refactor

fix regressions when renaming template params

Documentation cleanup
Implemented doc feedback from @timgraham

sphinx spelling corrections

Fix early access of settings module

fix spatialite lookups

Add myself to AUTHORS

Alphabetise name in Authors

Fixed spatialite regression not resolving internal field

Removed col tuples from expressions

Use output_type in get_sources() instead of recursing

Removed broken multicolumn support from expressions

Fixed prepare() to return clone of self

Previously reuse of same F-object could lead to altering the query where
it was used before.

Also added some changes to how output_type is calculated. It is now OK
to have no output_type for inner expressions, but outer expressions must
always have one. Internally _output_type can return None, but
output_type can't. The reason is that we want to support F('foo') + 1,
where + 1 is converted to Value(1) and that doesn't have any known
output_type. It is thus OK to use the output_type of F('foo'). However,
if directly doing .annotate(Max(Value(1)), that isn't OK, as we need to
know the output_type of the value to do conversions. So, users still
must define output_type in that case, that is Max(Value(1),
output_type=IntegerField()). Another solut

--- a/AUTHORS
+++ b/AUTHORS
@@ -609,6 +609,10 @@ answer newbie questions, and generally made Django that much better:
     Simon Willison <simon@simonwillison.net>
     Slawek Mikula <slawek dot mikula at gmail dot com>
     sloonz <simon.lipp@insa-lyon.fr>
+    Josh Smeaton <josh.smeaton@gmail.com>
+    Paul Smith <blinkylights23@gmail.com>
+    Steven L. Smith (fvox13) <steven@stevenlsmith.com>
+    Warren Smith <warren@wandrsmith.net>
     smurf@smurf.noris.de
     sopel
     Stanislas Guerra <stan@slashdev.me>
